FIX layout shift when loading img

--- a/src/components/Card/index.module.css
+++ b/src/components/Card/index.module.css
@@ -2,10 +2,11 @@
   position: relative;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, auto);
+  grid-template-rows: 1fr;
   text-decoration: none;
   transform: scale(1);
   transition: transform 0.5s ease;
+  aspect-ratio: 1/1;
 }
 
 .card:hover {
@@ -29,8 +30,7 @@
 
 .card__image {
   grid-column: 1/2;
-  grid-row: 1/3;
-  aspect-ratio: 1/1;
+  grid-row: 1/2;
   height: 100%;
   object-fit: cover;
   border-radius: 10px;
@@ -38,7 +38,8 @@
 
 .card__title {
   grid-column: 1/2;
-  grid-row: 2/3;
+  grid-row: 1/2;
+  align-self: end;
   font-size: 1.125rem;
   font-weight: normal;
   color: var(--white);
