--- a/src/components/Grid/index.module.css
+++ b/src/components/Grid/index.module.css
@@ -7,7 +7,7 @@
 .grid__list {
   display: grid;
   gap: 3.125rem 3.75rem;
-  grid-template-columns: repeat(auto-fit, minmax(280px, auto));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 }
 
 @media screen and (max-width: 1280px) {
